--- a/style.css
+++ b/style.css
@@ -10,5 +10,5 @@ h1 {
 .section {
   font-family: 'Poppins', Sans-Serif;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
