--- a/style.css
+++ b/style.css
@@ -26,4 +26,11 @@ h1 {
 .button {
   margin: 245px;
   background-color: #BBACC1;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
 }
