--- a/style.css
+++ b/style.css
@@ -36,6 +36,6 @@ h1 {
   width: 25%;
 }
 
-.button:hover {
-  background-color: #765F7F: 
-}
+/*.button:hover {*/
+/*  background-color: #765F7F: */
+/*}*/
