Automatically backed up by Learn

--- a/style.css
+++ b/style.css
@@ -36,10 +36,7 @@ h1 {
   width: 25%;
 }
 
-/*.button:hover {*/
-/*  background-color: #765F7F: */
-/*}*/
 .button:hover {
-  background-color: #4CAF50; /* Green */
+  background-color: #4CAF50;
   color: white;
 }
